// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test PDCInfrastructureSpec behavior - No Preconfigured should call onUpdate if valid values entered - inputset 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
  >
    <div
      class="specifyHostsRadioGroup"
    >
      <label
        class="bp3-control bp3-radio"
      >
        <input
          checked=""
          name="Blueprint3.RadioGroup-0"
          type="radio"
          value="false"
        />
        <span
          class="bp3-control-indicator"
        />
        cd.steps.pdcStep.specifyHostsOption
      </label>
      <label
        class="bp3-control bp3-radio"
      >
        <input
          name="Blueprint3.RadioGroup-0"
          type="radio"
          value="true"
        />
        <span
          class="bp3-control-indicator"
        />
        cd.steps.pdcStep.preconfiguredHostsOption
      </label>
    </div>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
        class="FormikForm--main"
      >
        <div>
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main formRow StyledProps--margin-bottom-large"
          >
            <div
              class="bp3-form-group hostsTextArea inputWidth"
              data-id="hosts-0"
            >
              <label
                class="bp3-label"
                for="hosts"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="pdcInfra_hosts"
                >
                  connectors.pdc.hosts
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <div
                    style="display: flex; align-items: center;"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                      style="flex-grow: 1;"
                    >
                      <textarea
                        class="bp3-input input"
                        name="hosts"
                      >
                        localhost
1.2.3.4
                      </textarea>
                      <span
                        class="bp3-popover-wrapper MultiTypeInput--wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <button
                            class="MultiTypeInput--btn MultiTypeInput--FIXED multiButtonForFixedType"
                          >
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="fixed-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 9 9"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="credRefWidth"
            >
              <div
                class="bp3-form-group"
                data-id="credentialsRef-1"
              >
                <label
                  class="bp3-label"
                  for="credentialsRef"
                >
                  cd.steps.common.specifyCredentials
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                    style="flex-grow: 1;"
                  >
                    <button
                      class="bp3-button Button--button StyledProps--font StyledProps--main value Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                      data-testid="create-or-select-secret"
                      type="button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="key-main"
                        style="height: 12px;"
                      >
                        <svg
                          height="24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            fill="none"
                            stroke="#1C1C28"
                            stroke-width="0.5"
                          >
                            <path
                              d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                            />
                            <path
                              d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                            />
                          </g>
                        </svg>
                      </span>
                      <span
                        class="bp3-button-text"
                      >
                        <p
                          class="StyledProps--font Text--lineclamp StyledProps--main"
                          style="--text-line-clamp: 1;"
                        >
                          credentialsRef
                        </p>
                      </span>
                    </button>
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--variation Button--variation-secondary Button--size Button--small"
              style="margin-top: 0px; width: 140px;"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                cd.steps.pdcStep.previewHosts
              </span>
            </button>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          >
            <hr />
          </div>
          <div
            class="Layout--vertical StyledProps--main simultaneousDeployment"
          >
            <div
              class="bp3-form-group"
              data-id="allowSimultaneousDeployments-2"
            >
              <div
                class="bp3-form-content"
              >
                <label
                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
                >
                  <input
                    checked=""
                    name="allowSimultaneousDeployments"
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  <span
                    class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                    data-tooltip-id="pdcInfraAllowSimultaneousDeployments"
                  >
                    cd.allowSimultaneousDeployments
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`test different stepViewType render runtimeview when no Preconfigured 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="formGroup md"
        >
          <div
            class="bp3-form-group hostsTextArea"
          >
            <label
              class="bp3-label"
              for="cd.hosts"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="pdcInfraRuntime_cd.hosts"
              >
                connectors.pdc.hosts
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="StyledProps--font StyledProps--main"
              >
                <div
                  style="display: flex; align-items: center;"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                    style="flex-grow: 1;"
                  >
                    <textarea
                      class="bp3-input input"
                      name="cd.hosts"
                    />
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED multiButtonForFixedType"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="formGroup md credRefWidth"
        >
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="cd.credentialsRef"
            >
              cd.steps.common.specifyCredentials
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                style="flex-grow: 1;"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main value Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                  data-testid="create-or-select-secret"
                  type="button"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="key-main"
                    style="height: 12px;"
                  >
                    <svg
                      height="24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="none"
                        stroke="#1C1C28"
                        stroke-width="0.5"
                      >
                        <path
                          d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                        />
                        <path
                          d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main"
                      style="--text-line-clamp: 1;"
                    >
                      createOrSelectSecret
                    </p>
                  </span>
                </button>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`test different stepViewType should render variable view 1`] = `<div />`;

exports[`test different stepViewType validateInputSet - render empty when default 1`] = `Object {}`;
